# optical-flow

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/: __main__.py
src/optical_flow/: settings.py
src/optical_flow/models/: datasets.py  flownets.py  util.py
src/optical_flow/models/hrnet/: cls_hrnet.py
src/optical_flow/scripts/: download_images.py  train_flownet.py  train_hrnet.py
src/optical_flow/youtube8m/: download_video_ids.py  download_youtube.py  utils.py
