[project]
name = "optical-flow"
version = "0.1.0"
description = "Flow Net Simple modified run over youtube8m dataste"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "aiohttp>=3.8.0",
    "flow-vis",
    "matplotlib>=3.5.1",
    "numpy>=1.20.0,<2.3.0",
    "opencv-python>=4.5.4.60",
    "pillow>=8.0.0,<11.0.0",
    "scenedetect>=0.5.6.1,<0.7",
    "torch>=1.10.1",
    "torchvision>=0.11.2",
    "yt-dlp>=2026.6.9",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

